--- a/client/app.json
+++ b/client/app.json
@@ -1,13 +1,14 @@
 {
-  "pages":[
+  "pages": [
+    "pages/demo/demo",
     "pages/index/index",
     "pages/addCgi/addCgi"
   ],
-  "window":{
-    "backgroundColor":"#F6F6F6",
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundColor": "#F6F6F6",
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "starry-sky",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   }
 }
