--- a/project.config.json
+++ b/project.config.json
@@ -4,11 +4,12 @@
 	"miniprogramRoot": "./client",
 	"qcloudRoot": "./server",
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
-		"newFeature": true
+		"newFeature": true,
+		"nodeModules": false
 	},
 	"appid": "wxd61e99af62aba2ad",
 	"projectname": "starry-sky",
