--- a/project.config.json
+++ b/project.config.json
@@ -4,12 +4,12 @@
 	"miniprogramRoot": "./client",
 	"qcloudRoot": "./server",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"nodeModules": false
+		"nodeModules": true
 	},
 	"appid": "wxd61e99af62aba2ad",
 	"projectname": "starry-sky",
